--- a/index.html
+++ b/index.html
@@ -11,108 +11,140 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <!-- HEADER -->
-<body class="main-body">
-    <!-- TOP LINE -->
-    <!-- <header class="page-header">  -->
+
+<body>
+    <!-- HEADER -->
     <header class="page-header">
-        <nav class="page-nav list">
-            <a class="link logo" href="./index.html">WEB<span class="link logo-studio">Studio</span></a>
-            <ul class="list menu-nav">
-                <li class="menu-item"><a class="link menu-link" href="./index.html">Studio</a></li>
-                <li class="menu-item"><a class="link menu-link" href="./portfolio.html">Portfolio</a></li>
-                <li class="menu-item"><a class="link menu-link" href="">Contacts</a></li>
-            </ul>  
-        </nav>
-        <address class="address-item">
-            <ul class="list">
-                <li class="menu-item"><a class="link contact mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="menu-item"><a class="link contact mail" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+        <div class="container page-header-container">
+            <nav class="page-nav list">
+                <a class="link logo" href="./index.html">WEB<span class="link logo-studio">Studio</span></a>
+                <ul class="list menu-nav">
+                    <li class="menu-item"><a class="link menu-link" href="./index.html">Studio</a></li>
+                    <li class="menu-item"><a class="link menu-link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="menu-item"><a class="link menu-link" href="">Contacts</a></li>
+                </ul>
+            </nav>
+
+            <address class="page-nav address-item">
+                <ul class="list menu-nav">
+                    <li class="menu-item"><a class="link contact mail"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="menu-item"><a class="link contact mail" href="tel:+110001111111">+11 (000)
+                            111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
+    <!-- HEADER -->
     <main>
-        <section class="hero">
-            <!-- HERO IMAGE/Section1(LMS) -->
-            <h1 class="main-title">Effective Solutions for Your Business</h1>
-            <button class="modal-btn" type="button">Order Service</button>
+    <!-- HERO -->
+        <section class="page-hero">
+            <div class="container main-title">
+                <h1 class="main-title">Effective Solutions for Your Business</h1>
+                <button class="modal-btn" type="button">Order Service</button>
+            </div>
         </section>
+    <!-- STRATEGY -->
         <section class="description-strategy-sections">
-            <!-- Section 1 Figma/Section2(LMS)  -->
-            <h2 class="text-title-strategy" hidden>Cтратегії розвитку</h2>
-            <ul class="list">
-                <li class="menu-item">
-                    <h3 class="text-title-description">Strategy</h3>
-                    <p class="text-description">Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.
-                    </p>
-                </li>
-                <li class="menu-item">
-                    <h3 class="text-title-description">Punctuality</h3>
-                    <p class="text-description">Bring the key message to the brand's audience for the best price within
-                        the shortest possible
-                        time.</p>
-                </li>
-                <li class="menu-item">
-                    <h3 class="text-title-description">Diligence</h3>
-                    <p class="text-description">Research and confirm brands that present the strongest digital growth
-                        opportunities and minimize
-                        risk.</p>
-                </li>
-                <li class="menu-item">
-                    <h3 class="text-title-description">Technologies</h3>
-                    <p class="text-description">Design practice focused on digital experiences. We bring forth a deep
-                        passion for
-                        problem-solving.</p>
-                </li>
-            </ul>
-        </section >
-        <section class="description-work-sections">
-            <!-- Section 2 What are we doing-->
-            <h2 class="text-title-strategy">What are we doing</h2>
-            <ul class="list">
-                <li class="menu-item"><img src="./images/what-are-we-doing/what-are-we-doing-1.jpg" alt="фото планшета" width="360" height="300">
-                </li>
-                <li class="menu-item"><img src="./images/what-are-we-doing/what-are-we-doing-2.jpg" alt="фото меседжера з декількома екранами" width="360" height="300">
-                </li>
-                <li class="menu-item"><img src="./images/what-are-we-doing/what-are-we-doing-3.jpg" alt="фото синхронізації екрана смартфона з ноутбуком" width="360" height="300">
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="text-title-strategy" hidden>Cтратегії розвитку</h2>
+                <ul class="list page-strategy-container">
+
+                    <li class="menu-item-strategy">
+                        <h3 class="text-title-description-strategy">Strategy</h3>
+                        <p class="text-description-strategy">Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution.
+                        </p>
+                    </li>
+
+                    <li class="menu-item-strategy">
+                        <h3 class="text-title-description-strategy">Punctuality</h3>
+                        <p class="text-description-strategy">Bring the key message to the brand's audience for the best price
+                            within
+                            the shortest possible
+                            time.</p>
+                    </li>
+                    <li class="menu-item-strategy">
+                        <h3 class="text-title-description-strategy">Diligence</h3>
+                        <p class="text-description-strategy">Research and confirm brands that present the strongest digital
+                            growth
+                            opportunities and minimize
+                            risk.</p>
+                    </li>
+                    <li class="menu-item-strategy">
+                        <h3 class="text-title-description-strategy">Technologies</h3>
+                        <p class="text-description-strategy">Design practice focused on digital experiences. We bring forth a
+                            deep
+                            passion for
+                            problem-solving.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section class="description-team-sections">
-            <!-- Section 3 Our Team-->
-            <h2 class="text-title-strategy">Our Team</h2>
-            <ul class="list">
-                <li class="menu-item-team">
-                    <img src="./images/our-team/our-team-mark-guerrero.jpg" alt="фото співробітника" width="264" height="260">
-                    <h3 class="text-title-description">Mark Guerrero</h3>
-                    <p class="text-description">Product Designer</p>
-                </li>
-                <li class="menu-item-team">
-                    <img src="./images/our-team/our-team-tom-ford.jpg" alt="фото співробітника" width="264" height="260">
-                    <h3 class="text-title-description">Tom Ford</h3>
-                    <p class="text-description">Frontend Developer</p>
-                </li>
-                <li class="menu-item-team">
-                    <img src="./images/our-team/our-team-camila-garcia.jpg" alt="фото співробітника" width="264" height="260">
-                    <h3 class="text-title-description">Camila Garcia</h3>
-                    <p class="text-description">Marketing</p>
-                </li>
-                <li class="menu-item-team">
-                    <img src="./images/our-team/our-team-daniel-wilson.jpg" alt="фото співробітника" width="264" height="260">
-                    <h3 class="text-title-description">Daniel Wilson</h3>
-                    <p class="text-description">UI Designer</p>
-                </li>
-            </ul>
+        <section class="description-work-sections">
+            <div class="container">
+                <!-- Section 2 What are we doing-->
+                <h2 class="text-title-strategy container">What are we doing</h2>
+                <ul class="list container">
+                    <li class="menu-item"><img src="./images/what-are-we-doing/what-are-we-doing-1.jpg"
+                            alt="фото планшета" width="360" height="300">
+                    </li>
+                    <li class="menu-item"><img src="./images/what-are-we-doing/what-are-we-doing-2.jpg"
+                            alt="фото меседжера з декількома екранами" width="360" height="300">
+                    </li>
+                    <li class="menu-item"><img src="./images/what-are-we-doing/what-are-we-doing-3.jpg"
+                            alt="фото синхронізації екрана смартфона з ноутбуком" width="360" height="300">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="description-team-sections container">
+            <div class="container">
+                <!-- Section 3 Our Team-->
+                <h2 class="text-title-strategy">Our Team</h2>
+                <ul class="list">
+                    <li class="menu-item-team">
+                        <img src="./images/our-team/our-team-mark-guerrero.jpg" alt="фото співробітника" width="264"
+                            height="260">
+                        <h3 class="text-title-description">Mark Guerrero</h3>
+                        <p class="text-description">Product Designer</p>
+                    </li>
+                    <li class="menu-item-team">
+                        <img src="./images/our-team/our-team-tom-ford.jpg" alt="фото співробітника" width="264"
+                            height="260">
+                        <h3 class="text-title-description">Tom Ford</h3>
+                        <p class="text-description">Frontend Developer</p>
+                    </li>
+                    <li class="menu-item-team">
+                        <img src="./images/our-team/our-team-camila-garcia.jpg" alt="фото співробітника" width="264"
+                            height="260">
+                        <h3 class="text-title-description">Camila Garcia</h3>
+                        <p class="text-description">Marketing</p>
+                    </li>
+                    <li class="menu-item-team">
+                        <img src="./images/our-team/our-team-daniel-wilson.jpg" alt="фото співробітника" width="264"
+                            height="260">
+                        <h3 class="text-title-description">Daniel Wilson</h3>
+                        <p class="text-description">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <!-- FOOTER -->
-    <footer class="footer-title">
-        <a class="link logo" href="./index.html">WEB<span class="logo-studio-footer">Studio</span></a>
-        <p class="text-description-footer">Increase the flow of customers and sales for your business with digital marketing &
+    <footer class="footer-title container">
+        <div class="container"></div>
+            <a class="link logo" href="./index.html">WEB<span class="logo-studio-footer">Studio</span></a>
+            <p class="text-description-footer">Increase the flow of customers and sales for your business with digital
+            marketing &
             growth solutions.</p>
+        </div>
     </footer>
 </body>
 
