--- a/portfolio.html
+++ b/portfolio.html
@@ -17,20 +17,22 @@
 
 <body class="main-body">
     <header class="page-header">
-        <div class="container">
+        <div class="container page-header-container">
             <nav class="page-nav list">
-                <a class="link logo" href="./index.html">WEB<span class="logo-studio">Studio</span></a>
-                <ul class="menu list">
-                    <li class="menu-item"><a class="link menu-link" href="./index.html">Studio</a></li>
-                    <li class="menu-item"><a class="link menu-link" href="./portfolio.html">Portfolio</a></li>
-                    <li class="menu-item"><a class="link menu-link" href="">Contacts</a></li>
+                <a class="link logo logo-header" href="./index.html">WEB<span class="link logo-studio">Studio</span></a>
+                <ul class="list menu-nav">
+                    <li class="menu-item-nav"><a class="link menu-link" href="./index.html">Studio</a></li>
+                    <li class="menu-item-nav"><a class="link menu-link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="menu-item-nav"><a class="link menu-link" href="">Contacts</a></li>
                 </ul>
             </nav>
-            <address class="address-item">
-                <ul class="list">
-                    <li class="menu-item"><a class="link contact mail"
+
+            <address class="page-nav address-item">
+                <ul class="list menu-nav">
+                    <li class="menu-item-contact"><a class="link contact mail"
                             href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="menu-item"><a class="link contact mail" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <li class="menu-item-contact"><a class="link contact mail" href="tel:+110001111111">+11 (000)
+                            111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -41,22 +43,24 @@
         <section>
             <div class="container">
                 <h1 class="main-title" hidden>Filters</h1>
-                <ul class="list">
+                <ul class="list filter-btn-menu">
                     <li><button class="filter-btn" type="button">All</button></li>
                     <li><button class="filter-btn" type="button">Web Site</button></li>
                     <li><button class="filter-btn" type="button">App</button></li>
                     <li><button class="filter-btn" type="button">Design</button></li>
                     <li><button class="filter-btn" type="button">Marketing</button></li>
                 </ul>
-                <ul class="list">
+                <ul class="list portfolio-card-menu">
                     <!--Row 1-->
                     <!--Project Card 1-->
                     <li>
                         <a class="link" href="">
                             <img src="./images/portfolio/card-1.jpg" alt="концепт інтерфейсу банківського додатку"
                                 width="360" height="300">
-                            <h2 class="text-title-description">Banking App Interface Concept</h2>
-                            <p class="text-description">App</p>
+                            <div class="text-description-box-card">
+                                <h2 class="text-title-description-card">Banking App Interface Concept</h2>
+                                <p class="text-description-card">App</p>
+                            </div>
                         </a>
                     </li>
                     <!--Project Card 2-->
@@ -64,8 +68,10 @@
                         <a class="link" href="">
                             <img src="./images/portfolio/card-2.jpg" alt="зображення оплати телефоном" width="360"
                                 height="300">
-                            <h2 class="text-title-description">Cashless Payment</h2>
-                            <p class="text-description">Marketing</p>
+                            <div class="text-description-box-card">
+                                <h2 class="text-title-description-card">Cashless Payment</h2>
+                                <p class="text-description-card">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <!--Project Card 3-->
@@ -74,8 +80,10 @@
                             <img src="./images/portfolio/card-3.jpg"
                                 alt="додатки з медитації зображення відкритого працюючого ноутбука" width="360"
                                 height="300">
-                            <h2 class="text-title-description">Meditation App</h2>
-                            <p class="text-description">App</p>
+                            <div class="text-description-box-card">
+                                <h2 class="text-title-description-card">Meditation App</h2>
+                                <p class="text-description-card">App</p>
+                            </div>
                         </a>
                     </li>
                     <!--Row 2-->
@@ -84,8 +92,10 @@
                         <a class="link" href="">
                             <img src="./images/portfolio/card-4.jpg"
                                 alt="зображення таксі сервісу з закріпленим смартфоном в авто" width="360" height="300">
-                            <h2 class="text-title-description">Taxi Service</h2>
-                            <p class="text-description">Marketing</p>
+                            <div class="text-description-box-card">
+                                <h2 class="text-title-description-card">Taxi Service</h2>
+                                <p class="text-description-card">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <!--Project Card 5-->
@@ -93,8 +103,10 @@
                         <a class="link" href="">
                             <img src="./images/portfolio/card-5.jpg" alt="зображення дизайну екранної галереї"
                                 width="360" height="300">
-                            <h2 class="text-title-description">Screen Illustrations</h2>
-                            <p class="text-description">Design</p>
+                            <div class="text-description-box-card">
+                                <h2 class="text-title-description-card">Screen Illustrations</h2>
+                                <p class="text-description-card">Design</p>
+                            </div>
                         </a>
                     </li>
                     <!--Project Card 6-->
@@ -103,8 +115,10 @@
                             <img src="./images/portfolio/card-6.jpg"
                                 alt="Онлайн курси маркетингу зображення усміхненої жінки з гарнітурою" width="360"
                                 height="300">
-                            <h2 class="text-title-description">Online Courses</h2>
-                            <p class="text-description">Marketing</p>
+                            <div class="text-description-box-card">
+                                <h2 class="text-title-description-card">Online Courses</h2>
+                                <p class="text-description-card">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <!--Row 3-->
@@ -113,8 +127,10 @@
                         <a class="link" href="">
                             <img src="./images/portfolio/card-7.jpg" alt="Концепт хображеннь сторіс в Інстаграм"
                                 width="360" height="300">
-                            <h2 class="text-title-description">Instagram Stories Concept</h2>
-                            <p class="text-description">Design</p>
+                            <div class="text-description-box-card">
+                                <h2 class="text-title-description-card">Instagram Stories Concept</h2>
+                                <p class="text-description-card">Design</p>
+                            </div>
                         </a>
                     </li>
                     <!--Project Card 8-->
@@ -122,8 +138,10 @@
                         <a class="link" href="">
                             <img src="./images/portfolio/card-8.jpg" alt="Зображення свіжих овочів в сітці" width="360"
                                 height="300">
-                            <h2 class="text-title-description">Organic Food</h2>
-                            <p class="text-description">Web Site</p>
+                            <div class="text-description-box-card">
+                                <h2 class="text-title-description-card">Organic Food</h2>
+                                <p class="text-description-card">Web Site</p>
+                            </div>
                         </a>
                     </li>
                     <!--Project Card 9-->
@@ -131,8 +149,10 @@
                         <a class="link" href="">
                             <img src="./images/portfolio/card-9.jpg" alt="зображення процесу додавання молока в каву"
                                 width="360" height="300">
-                            <h2 class="text-title-description">Fresh Coffee</h2>
-                            <p class="text-description">Web Site</p>
+                            <div class="text-description-box-card">
+                                <h2 class="text-title-description-card">Fresh Coffee</h2>
+                                <p class="text-description-card">Web Site</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
@@ -142,10 +162,16 @@
     <!-- FOOTER -->
     <footer class="footer-title">
         <div class="container">
-            <a class="link logo" href="./index.html">WEB<span class="logo-studio-footer">Studio</span></a>
-            <p class="text-description-footer">Increase the flow of customers and sales for your business with digital
-                marketing &
-                growth solutions.</p>
+            <div class="logo-footer">
+                <a class="link logo" href="./index.html">WEB<span
+                        class="logo-studio-footer">Studio</span></a>
+            </div>
+            <div class="text-description-footer-item">
+                <p class="text-description-footer">Increase the flow of customers and sales for your business with
+                    digital
+                    marketing &
+                    growth solutions.</p>
+            </div>
         </div>
     </footer>
 </body>
