--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     </header>
     <!-- Filters -->
     <main>
-        <section>
+        <section class="section-portfolio-page">
             <div class="container">
                 <h1 class="main-title" hidden>Filters</h1>
                 <ul class="list filter-btn-menu">
