--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     </header>
 
     <main>
-        <!-- HERO -->
+        <!-- HERO (1)-->
         <section class="page-hero">
             <div class="container">
                 <h1 class="main-title">Effective Solutions for Your Business</h1>
                 <button class="modal-btn" type="button">Order Service</button>
             </div>
         </section>
-        <!-- STRATEGY -->
+        <!-- STRATEGY (2) -->
         <section class="description-strategy-sections">
             <div class="container">
                 <h2 class="text-title-strategy" hidden>Cтратегії розвитку</h2>
@@ -89,7 +89,7 @@
                 </ul>
             </div>
         </section>
-        <!-- WORK -->
+        <!-- WORK (3) -->
         <section class="description-work-sections">
             <div class="container">
                 <!-- Section 2 What are we doing-->
@@ -107,7 +107,7 @@
                 </ul>
             </div>
         </section>
-        <!-- OUR TEAM -->
+        <!-- OUR TEAM (4) -->
         <section class="description-team-sections">
             <div class="container">
                 <!-- Section 3 Our Team-->
@@ -152,16 +152,16 @@
     <!-- FOOTER -->
     <footer class="footer-title">
         <div class="container">
-            <div class="logo-footer">
-                <a class="link logo" href="./index.html">WEB<span
-                        class="logo-studio-footer">Studio</span></a>
-            </div>
-            <div class="text-description-footer-item">
-                <p class="text-description-footer">Increase the flow of customers and sales for your business with
-                    digital
-                    marketing &
-                    growth solutions.</p>
-            </div>
+            <!-- class="logo-footer" -->
+            <a class="link logo logo-footer" href="./index.html">WEB<span class="logo-studio-footer">Studio</span></a>
+
+            <!-- class="text-description-footer-item" -->
+            <p class="text-description-footer">Increase the flow of customers and sales for your business with
+                digital
+                marketing &
+                growth solutions.
+            </p>
+
         </div>
     </footer>
 </body>
