--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="main-body">
     <!-- HEADER -->
     <header class="page-header">
         <div class="container page-header-container">
