--- a/portfolio.html
+++ b/portfolio.html
@@ -162,16 +162,16 @@
     <!-- FOOTER -->
     <footer class="footer-title">
         <div class="container">
-            <div class="logo-footer">
-                <a class="link logo" href="./index.html">WEB<span
-                        class="logo-studio-footer">Studio</span></a>
-            </div>
-            <div class="text-description-footer-item">
-                <p class="text-description-footer">Increase the flow of customers and sales for your business with
-                    digital
-                    marketing &
-                    growth solutions.</p>
-            </div>
+            <!-- class="logo-footer" -->
+            <a class="link logo logo-footer" href="./index.html">WEB<span class="logo-studio-footer">Studio</span></a>
+
+            <!-- class="text-description-footer-item" -->
+            <p class="text-description-footer">Increase the flow of customers and sales for your business with
+                digital
+                marketing &
+                growth solutions.
+            </p>
+
         </div>
     </footer>
 </body>
